@@ -1174,9 +1174,8 @@
     "religion.praiseBtn.desc": "Transfere toda sua fé para dentro da reserva de fé acumulada",
     "religion.transcendBtn.label": "Transcender",
     "religion.transcendBtn.desc": "Transcenda os limites mortais",
-    "religion.faithCount.pool": "Fé acumulada: {0}",
     "religion.praise.msg": "Você acumulou +{0} unidades de fé",
-    "religion.resetFaith.confirmation.msg": "Tem certeza que quer reiniciar a reserva? \n\n Ganhe +10% à transferência de fé por cada 100k de fé.\n\nEste bônus continua ativo entre recomeços.\n\nCLICAR NESTE BOTÃO APAGARÁ UMA PARTE DO BÔNUS DE FÉ.",
+    "religion.adore.confirmation.msg": "Tem certeza que quer reiniciar a reserva? \n\n Ganhe +10% à transferência de fé por cada 100k de fé.\n\nEste bônus continua ativo entre recomeços.\n\nCLICAR NESTE BOTÃO APAGARÁ UMA PARTE DO BÔNUS DE FÉ.",
     "religion.transcend.confirmation.msg": "Tem certeza que quer descartar seu bônus de louvor?\n\nVocê pode alcançar um nível especial de transcendência ao sacrificar seu bônus se louvor.\n\nCada nível requer proporcionalmente mais bônus de fé para ser sacrificado.\n\nEste bônus se acumula e continua ativo entre recomeços.\n\nCLICAR NESTE BOTÃO APAGARÁ UMA PARTE DO BÔNUS DE FÉ EM LOUVOR.",
     "religion.transcend.confirmation.title": "Transcender?",
     "religion.transcend.msg.success": "Você transcende os limites mortais. Nível-T: {0}",
