@@ -1186,9 +1186,8 @@
     "religion.praiseBtn.desc": "Převést všechnu víru do nahromaděných zásob",
     "religion.transcendBtn.label": "Transcendovat",
     "religion.transcendBtn.desc": "Překroč smrtelné limity",
-    "religion.faithCount.pool": "Nahromaděná víra: {0}",
     "religion.praise.msg": "Nahromadil jsi +{0} jednotek víry",
-    "religion.resetFaith.confirmation.msg": "Jseš si jistý, že chceš resetovat hromadění víry?\n\nDostaneš bonus k přenos víry odpovídající celkovému množství víry nahromaděné chválením.\n\nTento bonus přetrvává mezi resety.\n\nKLIKNUTÍ NA TOTO TLAČÍTKO ODSTRANÍ VEŠKEROU VÍRU, NAHROMADĚNOU PŘES MODLENÍ.",
+    "religion.adore.confirmation.msg": "Jseš si jistý, že chceš resetovat hromadění víry?\n\nDostaneš bonus k přenos víry odpovídající celkovému množství víry nahromaděné chválením.\n\nTento bonus přetrvává mezi resety.\n\nKLIKNUTÍ NA TOTO TLAČÍTKO ODSTRANÍ VEŠKEROU VÍRU, NAHROMADĚNOU PŘES MODLENÍ.",
     "religion.transcend.confirmation.msg": "Jseš si jistý/á, že chceš odstranit tvůj bonus k hromadění víry?\n\nMůžeš dosáhnout speciálních úrovní transcendence tím, že obětuješ část tvého bonusu k hromadění víry.\n\nKaždá úroveň zlepší účinnost resetů hromadění víry.\n\nKaždá úroveň vyžaduje obětovat neúměrně více věrnostního bonusu.\n\nTento bonus se postupně sčítá a přetrvává přes resety.\n\nKLIKNUTÍ NA TOTO TLAČÍTKO ODSTRANÍ ČÍST TVÉHO VĚRNOSTNÍHO BONUSU K HROMADĚNÍ VÍRY.",
     "religion.transcend.confirmation.title": "Transcendovat?",
     "religion.transcend.msg.success": "Překonal jsi smrtelné limity. Úroveň Transcendence: {0}",
