@@ -40,7 +40,7 @@
     "achievements.spaceOddity.desc": "Complete a Moon Program in Iron Will mode",
     "achievements.spaceOddity.starDesc": "Get Moon Program in IW without any paragon points",
     "achievements.sunGod.title": "Sun God",
-    "achievements.sunGod.desc": "Gain a total of 696,342 accumulated faith",
+    "achievements.sunGod.desc": "Gain a total of 696,342 worship",
     "achievements.superUnethicalClimax.title": "Super Unethical Climax",
     "achievements.superUnethicalClimax.desc": "Cheat your way through the game.",
     "achievements.systemShock.title": "System Shock",
@@ -589,7 +589,7 @@
     "prestige.vitruvianFeline.label": "Vitruvian Feline",
     "prestige.vitruvianFeline.desc": "Reduce all price ratios by 2%",
     "prestige.voidOrder.label": "Order of the Void",
-    "prestige.voidOrder.desc": "Adds 10% produced faith, which is automatically accumulated.",
+    "prestige.voidOrder.desc": "Adds 10% produced faith, which is automatically converted as worship.",
     "prestige.willenfluff.label": "Venus of Willenfluff",
     "prestige.willenfluff.desc": "Kittens will arrive 75% faster.",
     "prestige.yesod.label": "Yesod",
@@ -599,15 +599,15 @@
     "prestige.zebraDiplomacy.label": "Zebra Diplomacy",
     "prestige.zebraDiplomacy.desc": "Some zebras hunters will stay in the village. (You need to unlock zebra hunters first to use this upgrade).",
 
-    "religion.adoreBtn.label": "Adore the galaxy",
-    "religion.adoreBtn.desc": "Former [Faith Reset]",
-    "religion.faithCount.pool": "Accumulated faith: {0}",
+    "religion.adoreBtn.label": "Adore the stars!",
+    "religion.adoreBtn.desc": "Convert all your worship to epiphany",
+    "religion.adore.confirmation.msg": "Are you sure you want to convert all worship to epiphany?\n\nYou will get a bonus to faith convertion (Praise the sun) based on your total amount of epiphany.\n\nEpiphany and this bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL WORSHIP AND RESET SOLAR REVOLUTION PRODUCTION BONUS.",
     "religion.msg.corruption": "Your alicorn was corrupted by the markers!",
     "religion.panel.cryptotheology.label": "Cryptotheology",
     "religion.panel.orderOfTheSun.label": "Order of the Sun",
     "religion.panel.ziggurat.label": "Ziggurats",
-    "religion.praise.msg": "You have accumulated +{0} units of faith",
-    "religion.praiseBtn.desc": "Transfer all your faith to the accumulated faith pool",
+    "religion.praise.msg": "You have converted +{0} units of faith",
+    "religion.praiseBtn.desc": "Convert all your faith to worship",
     "religion.praiseBtn.label": "Praise the sun!",
     "religion.refineTCsBtn.desc": "Refine Time Crystals into elder relics.",
     "religion.refineTCsBtn.label": "Refine TCs",
@@ -615,9 +615,8 @@
     "religion.refineTearsBtn.desc": "Refine Unicorn Tears into a Black Liquid Sorrow.",
     "religion.refineTearsBtn.label": "Refine Tears",
     "religion.refineTearsBtn.refine.msg.failure": "Nothing happens",
-    "religion.resetFaith.confirmation.msg": "Are you sure you want to reset the pool?\n\nYou will get a bonus to faith transfer based on your total amount of faith accumulated through praising.\n\nThis bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL FAITH ACCUMULATED THROUGH PRAISING.",
     "religion.ru.apocripha.label": "Apocrypha",
-    "religion.ru.apocripha.desc": "Grants the ability to discard accumulated faith to improve effectiveness of praying",
+    "religion.ru.apocripha.desc": "Grants the ability to convert worship to epiphany, which improve effectiveness of praying",
     "religion.ru.basilica.label": "Basilica",
     "religion.ru.basilica.desc": "Temples generate more culture and expand cultural limits",
     "religion.ru.goldenSpire.label": "Golden Spire",
@@ -626,7 +625,7 @@
     "religion.ru.scholasticism.label": "Scholasticism",
     "religion.ru.scholasticism.desc": "Temples will give a bonus to max science",
     "religion.ru.solarRevolution.label": "Solar Revolution",
-    "religion.ru.solarRevolution.desc": "Accumulated faith will give a small boost to resource production.",
+    "religion.ru.solarRevolution.desc": "Worship will give a small boost to resource production.",
     "religion.ru.solarchant.label": "Solar Chant",
     "religion.ru.solarchant.desc": "Improves your faith generation rate by 10%",
     "religion.ru.stainedGlass.label": "Stained Glass",
@@ -645,11 +644,11 @@
     "religion.sacrificeBtn.desc": "Return the unicorns to the Unicorn Dimension. You will receive one Unicorn Tear for every ziggurat you have.",
     "religion.sacrificeBtn.sacrifice.msg": "{0} unicorns have been sacrificed. You've got {1} unicorn tears!",
     "religion.transcend.confirmation.title": "Transcend?",
-    "religion.transcend.confirmation.msg": "Are you sure you want to discard your praise bonus?\n\nYou can reach special transcendence tiers by sacrificing part of your praise bonus.\n\nEach tier will boost the effectiveness of faith resets.\n\nEvery level requires proportionally more faith bonus to be sacrificed.\n\nThis bonus will stack and carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE PART OF YOUR PRAISE BONUS.",
+    "religion.transcend.confirmation.msg": "Are you sure you want to discard part of your epiphany?\n\nYou can reach special transcendence tiers by sacrificing part of your epiphany.\n\nEach tier will boost the effectiveness of worship convertion (Adore the stars).\n\nEvery level requires proportionally more epiphany to be sacrificed.\n\nThis bonus will stack and carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE PART OF YOUR EPIPHANY AND PRAISING EFFICIENCY.",
     "religion.transcend.msg.failure": "One step closer: {0}%",
     "religion.transcend.msg.success": "You have transcended the mortal limits. T-level: {0}",
     "religion.transcendBtn.label": "Transcend",
-    "religion.transcendBtn.desc": "Transcend the mortal limits",
+    "religion.transcendBtn.desc": "Transcend the mortal limits and improves efficiency of adoration",
     "religion.tu.blackCore.label": "Black Core",
     "religion.tu.blackCore.desc": "Alter and corrupt the laws of the reality on a minor scale.<br>Every level of Black Core increases BLS limit by 1%.",
     "religion.tu.blackCore.flavor": "Built with the bones of kitten sacrifices.",
