@@ -1173,9 +1173,8 @@
     "religion.praiseBtn.desc": "Transfiera toda su fe en el conjunto de fe acumulada",
     "religion.transcendBtn.label": "Trascender",
     "religion.transcendBtn.desc": "Trascender los límites mortales",
-    "religion.faithCount.pool": "Fe acumulada: {0}",
     "religion.praise.msg": "Has acumulado + {0} unidades de fe",
-    "religion.resetFaith.confirmation.msg": "¿Está seguro de que desea restablecer el grupo?\n\nObtendrá + 10% de transferencia de fe por cada 100K de fe.\n\nEsta bonificación se transferirá a través de restablecimientos.\n\nHAGA CLIC EN ESTE BOTÓN BORRARÁ UNA PARTE DE SU BONO DE FE.",
+    "religion.adore.confirmation.msg": "¿Está seguro de que desea restablecer el grupo?\n\nObtendrá + 10% de transferencia de fe por cada 100K de fe.\n\nEsta bonificación se transferirá a través de restablecimientos.\n\nHAGA CLIC EN ESTE BOTÓN BORRARÁ UNA PARTE DE SU BONO DE FE.",
     "religion.transcend.confirmation.msg": "¿Estás seguro de que quieres descartar tu bonificación de alabanza?\n\nPuedes alcanzar un nivel de trascendencia especial sacrificando tu bonificación de alabanza.\n\nTodo nivel requiere proporcionalmente que se sacrifiquen más bonificaciones de fe.\n\nEsta bonificación se acumulará y se transferirá a través de reinicios.\n\nALIMENTACIÓN DE ESTE BOTÓN BORRARÁ PARTE DEL BONO DE FE DE SU ALABANZA.",
     "religion.transcend.confirmation.title": "Trascender?",
     "religion.transcend.msg.success": "Has trascendido los límites mortales. T-Nivel: {0}",
