@@ -1190,9 +1190,8 @@
     "religion.praiseBtn.desc": "Convert all your accumulated faith to the total pool",
     "religion.transcendBtn.label": "Transcender",
     "religion.transcendBtn.desc": "Transcend the mortal limits",
-    "religion.faithCount.pool": "Foi accumulée: {0}",
     "religion.praise.msg": "You have accumulated +{0} units of faith",
-    "religion.resetFaith.confirmation.msg": "Are you sure you want to reset the pool?\n\nYou will get a bonus to faith transfer based on your total amount of faith accumulated through praising.\n\nThis bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL FAITH ACCUMULATED THROUGH PRAISING.",
+    "religion.adore.confirmation.msg": "Are you sure you want to reset the pool?\n\nYou will get a bonus to faith transfer based on your total amount of faith accumulated through praising.\n\nThis bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL FAITH ACCUMULATED THROUGH PRAISING.",
     "religion.transcend.confirmation.msg": "Are you sure you want to discard your praise bonus?\n\nYou can reach special transcendence tiers by sacrificing part of your praise bonus.\n\nEach tier will boost the effectiveness of faith resets.\n\nEvery level requires proportionally more faith bonus to be sacrificed.\n\nThis bonus will stack and carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE PART OF YOUR PRAISE BONUS.",
     "religion.transcend.confirmation.title": "Transcender?",
     "religion.transcend.msg.success": "You have transcended the mortal limits. T-level: {0}",
