@@ -1186,9 +1186,8 @@
     "religion.praiseBtn.desc": "蓄積された信仰のプールにすべての信仰を移します。",
     "religion.transcendBtn.label": "超越する",
     "religion.transcendBtn.desc": "死の淵を超越します。",
-    "religion.faithCount.pool": "蓄積された信仰: {0}",
     "religion.praise.msg": "あなたは +{0} の信仰値を蓄積した。",
-    "religion.resetFaith.confirmation.msg": "本当に総信仰値をリセットしますか?\n\n100Kの信仰ごとに +10% の信仰移転を受けます。\n\nこのボーナスはリセット後も受け継がれます。\n\nこのボタンをクリックすると信仰ボーナスの一部が消えます。",
+    "religion.adore.confirmation.msg": "本当に総信仰値をリセットしますか?\n\n100Kの信仰ごとに +10% の信仰移転を受けます。\n\nこのボーナスはリセット後も受け継がれます。\n\nこのボタンをクリックすると信仰ボーナスの一部が消えます。",
     "religion.transcend.confirmation.msg": "本当に賛美ボーナスを捨てますか?\n\n賛美ボーナスを犠牲にして特別な超越レベルに達します。\n\nレベルが上がるにつれ、より信仰ボーナスを犠牲にすることを要求します。\n\nこのボーナスはリセット後も積み上がり、受け継がれます。\n\nこのボタンをクリックすると祈りの信仰ボーナスの一部をが消えます。",
     "religion.transcend.confirmation.title": "超越しますか?",
     "religion.transcend.msg.success": "あなたは死の淵を超越した T-level: {0}",
