@@ -1184,9 +1184,8 @@
     "religion.praiseBtn.desc": "Przenieś całą wiarę na pulę nagromadzonej wiary",
     "religion.transcendBtn.label": "Przekroczyć",
     "religion.transcendBtn.desc": "Przekroczyć granice śmiertelników",
-    "religion.faithCount.pool": "Nagromadzona wiara: {0}",
     "religion.praise.msg": "Zgromadziłeś +{0} jednostek wiary",
-    "religion.resetFaith.confirmation.msg": "Czy na pewno chcesz zresetować pulę?\n\nYOtrzymasz + 10% do przeniesienia wiary na 100 tysięcy wiary.\n\nTa premia zostanie przeniesiona poprzez resetowanie.\n\nKLIKNIĘCIE TEGO PRZYCISKU BĘDZIE USUWAĆ CZĘŚĆ SWOJEGO BONUSU WIARY.",
+    "religion.adore.confirmation.msg": "Czy na pewno chcesz zresetować pulę?\n\nYOtrzymasz + 10% do przeniesienia wiary na 100 tysięcy wiary.\n\nTa premia zostanie przeniesiona poprzez resetowanie.\n\nKLIKNIĘCIE TEGO PRZYCISKU BĘDZIE USUWAĆ CZĘŚĆ SWOJEGO BONUSU WIARY.",
     "religion.transcend.confirmation.msg": "Czy na pewno chcesz odrzucić premię pochwały?\n\nMożesz osiągnąć specjalny poziom transcendencji poświęcając swój bonus pochwały.\n\nKażdy poziom wymaga proporcjonalnie więcej premii za wiarę, aby zostać poświęconym.\n\nTa premia zostanie ułożona i przeniesiona przez reset.\n\nKLIKNIĘCIE TEGO PRZYCISKU BĘDZIE USUWAĆ CZĘŚĆ SWOJEGO POŚWIĘCENIA BONUSU WIARY.",
     "religion.transcend.confirmation.title": "Przekroczyć?",
     "religion.transcend.msg.success": "Przekroczyłeś granice śmiertelności. Poziom T: {0}",
