@@ -1186,9 +1186,8 @@
     "religion.praiseBtn.desc": "Собрать текущую веру.",
     "religion.transcendBtn.label": "Взойти",
     "religion.transcendBtn.desc": "Превзойти пределы смертных.",
-    "religion.faithCount.pool": "Собранная вера: {0}",
     "religion.praise.msg": "Сохранено +{0} веры",
-    "religion.resetFaith.confirmation.msg": "Отказаться от сохраненной веры?\n\nДаст +10% эффективности молитв за каждые 100K собранной веры.\n\nСброс не затронет этот бонус.\n\nНАЖАТИЕ НА ЭТУ КНОПКУ УБЕРЕТ ЧАСТЬ БОНУСА ВЕРЫ.",
+    "religion.adore.confirmation.msg": "Отказаться от сохраненной веры?\n\nДаст +10% эффективности молитв за каждые 100K собранной веры.\n\nСброс не затронет этот бонус.\n\nНАЖАТИЕ НА ЭТУ КНОПКУ УБЕРЕТ ЧАСТЬ БОНУСА ВЕРЫ.",
     "religion.transcend.confirmation.msg": "Отказаться от бонуса к молитвам?\n\nЭто приведет к росту уровня восхождения.\n\nКаждый следующий уровень требует пропорционально большего взноса.\n\nСброс не повлияет на уровни восхождения.\n\nНАЖАТИЕ НА ЭТУ КНОПКУ УБЕРЕТ ЧАСТЬ БОНУСА К МОЛИТВАМ.",
     "religion.transcend.confirmation.title": "Взойти?",
     "religion.transcend.msg.success": "Пределы смертных превзойдены. Уровень восхождения: {0}",
